@@ -1,3 +1,7 @@
+2008-05-18  Michael Natterer  <mitch@gimp.org>
+
+	* app/paint/gimpbrushcore.c: clean up last patch.
+
 2008-05-18  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* plug-ins/script-fu/tinyscheme/scheme.c: Commited patch from gymp
